# IPStreamer

./: LICENSE  README.md  ip_streamer.py  pyproject.toml
src/ip_streamer_nordic_adrian/: __init__.py  ip_streamer.py
src/ip_streamer_nordic_adrian.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
