[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ip_streamer_nordic_adrian"
version = "0.0.1"
authors = [
  { name="Adrian Hjertholm Voldseth", email="adrian@nordicneurolab.com" },
]
description = "IP stream from webcam or file using open cv"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.12",
    "Flask>=3.1"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

